Update: Refactor search bar. Fix: layout on mobile. Update: Swapped layout bar around

--- a/src/styles/cardlist.css
+++ b/src/styles/cardlist.css
@@ -22,7 +22,6 @@
 .card-list {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   gap: 40px;
   margin: 4%;
@@ -48,58 +47,30 @@
 	justify-content: center;
 }
 
-/* Filter Dropdowns */
-.dropdowns {
+/* Filters */
+.dropdown-button {
+  padding: 0 20px;
+  border: unset;
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  width: 80vw;
-  border-bottom: 1px solid rgb(84, 84, 84);
-}
-
-.filter-dropdown {
-  position: relative;
-}
-
-.filter-dropdown-button {
-  border: none;
   width: 100%;
-  border-radius: unset;
-  background-color: unset;
-}
-
-.filter-reset-button {
-  font-size: 75%;
-  padding: 0.2rem 0.8rem;
-  border-radius: 30px;
-}
-
-.filter-dropdown-button:hover {
-  background-color: rgb(48, 48, 48);
-}
-
-.dropdown-list {
-  display: none;
-  position: fixed;
-  z-index: 600;
-  background-color: rgb(48, 48, 48);
-  padding: 3rem;
-  border-radius: 0 0 5px 5px;
-  box-sizing: border-box;
   font-size: 14px;
-  max-height: 60vh;
-  width: 100vw;
-  flex-flow: column wrap;
-  justify-content: flex-start;
-  align-items: stretch;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
-.filter-dropdown:hover .dropdown-list {
+.filters-container {
+  flex: 1;
+  overflow-y: auto;
+  padding: 4%;
   display: flex;
   flex-direction: column;
+  gap: 10px;
+}
+
+.filters-list {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
 }
 
 .dropdown-list-item {
@@ -110,13 +81,13 @@
   padding: 5px 8px;
   background-color: rgb(48, 48, 48);
   text-align: left;
-  max-width: 33%;
+  width: max-content;
 }
 
 .dropdown-list-item__selected {
   background-color: rgb(84, 84, 84);
 }
-/* END Filter Dropdowns */
+/* END Filters */
 
 .card-list__control-bar--page-contols {
   display: flex;
@@ -151,6 +122,7 @@
     flex-wrap: wrap;
     flex-direction: row;
     margin: 0 4%;
+    justify-content: center;
   }
 
   .dropdowns {
